ifram을 비디오 태그로 수정, 각 항목마다 비디오 바꿔줘야함

--- a/viewersplayground_moon.html
+++ b/viewersplayground_moon.html
@@ -203,12 +203,7 @@
           <div class="winner-wrap">
             <div class="video-content">
               <div class="video-wrap">
-                <iframe
-                  src="https://www.youtube.com/embed/L9 25sfLdm2Q?autoplay=1&mute=1&loop=1&playlist=L925sfLdm2Q&playsinline=1"
-                  title="Title : The Fire Inside | Nickname : rainyroom | Nickname : bloom" frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-                </iframe>
+                <video src="./moon/asset/the glory.mp4" autoplay muted loop playsinline controlslist="nodownload" oncontextmenu="return false;"></video>
                 <div class="award-info">
                   <h3 class="award">Gold Award</h3>
                   <div class="txtbox">
@@ -242,12 +237,7 @@
             </div><!-- .video-content -->
             <div class="video-content">
               <div class="video-wrap">
-                <iframe
-                  src="https://www.youtube.com/embed/L925sfLdm2Q?autoplay=1&mute=1&loop=1&playlist=L925sfLdm2Q&playsinline=1"
-                  title="Title : The Fire Inside | Nickname : rainyroom | Nickname : bloom" frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-                </iframe>
+                <video src="./moon/asset/the glory.mp4" autoplay muted loop playsinline controlslist="nodownload" oncontextmenu="return false;"></video>
                 <div class="award-info">
                   <h3 class="award">Silver Award</h3>
                   <div class="txtbox">
@@ -281,12 +271,7 @@
             </div><!-- video-content -->
             <div class="video-content">
               <div class="video-wrap">
-                <iframe
-                  src="https://www.youtube.com/embed/L925sfLdm2Q?autoplay=1&mute=1&loop=1&playlist=L925sfLdm2Q&playsinline=1"
-                  title="Title : The Fire Inside | Nickname : rainyroom | Nickname : bloom" frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-                </iframe>
+                <video src="./moon/asset/the glory.mp4" autoplay muted loop playsinline controlslist="nodownload" oncontextmenu="return false;"></video>
                 <div class="award-info">
                   <h3 class="award">Popular Choice</h3>
                   <div class="txtbox">
@@ -649,63 +634,28 @@
                     </li>
                     <li class="swiper-slide slide4">
                       <div class="fan-video-wrap">
-                        <figure class="put_in_later mirror">
+                        <figure>
                           <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
                     <li class="swiper-slide slide5">
                       <div class="fan-video-wrap">
-                        <figure class="put_in_later mirror">
+                        <figure>
                           <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
                     <li class="swiper-slide slide6">
                       <div class="fan-video-wrap">
-                        <figure class="put_in_later mirror">
+                        <figure>
                           <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
                     <li class="swiper-slide slide7">
                       <div class="fan-video-wrap">
-                        <figure class="put_in_later mirror">
-                          <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
-                        </figure>
-                      </div>
-                    </li>
-                    <li class="swiper-slide slide7">
-                      <div class="fan-video-wrap">
-                        <figure class="put_in_later mirror">
-                          <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
-                        </figure>
-                      </div>
-                    </li>
-                    <li class="swiper-slide slide7">
-                      <div class="fan-video-wrap">
-                        <figure class="put_in_later mirror">
-                          <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
-                        </figure>
-                      </div>
-                    </li>
-                    <li class="swiper-slide slide7">
-                      <div class="fan-video-wrap">
-                        <figure class="put_in_later mirror">
-                          <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
-                        </figure>
-                      </div>
-                    </li>
-                    <li class="swiper-slide slide7">
-                      <div class="fan-video-wrap">
-                        <figure class="put_in_later mirror">
-                          <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
-                        </figure>
-                      </div>
-                    </li>
-                    <li class="swiper-slide slide7">
-                      <div class="fan-video-wrap">
-                        <figure class="put_in_later mirror">
+                        <figure>
                           <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
@@ -721,49 +671,49 @@
                   <ul class="swiper-wrapper">
                     <li class="swiper-slide slide1">
                       <div class="fan-video-wrap">
-                        <figure class="put_in_later mirror">
+                        <figure>
                           <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
                     <li class="swiper-slide slide2">
                       <div class="fan-video-wrap">
-                        <figure class="put_in_later mirror">
+                        <figure>
                           <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
                     <li class="swiper-slide slide3">
                       <div class="fan-video-wrap">
-                        <figure class="put_in_later mirror">
+                        <figure>
                           <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
                     <li class="swiper-slide slide4">
                       <div class="fan-video-wrap">
-                        <figure class="put_in_later mirror">
+                        <figure>
                           <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
                     <li class="swiper-slide slide5">
                       <div class="fan-video-wrap">
-                        <figure class="put_in_later mirror">
+                        <figure>
                           <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
                     <li class="swiper-slide slide6">
                       <div class="fan-video-wrap">
-                        <figure class="put_in_later mirror">
+                        <figure>
                           <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
                     <li class="swiper-slide slide7">
                       <div class="fan-video-wrap">
-                        <figure class="put_in_later mirror">
+                        <figure>
                           <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
