--- a/index.html
+++ b/index.html
@@ -48,29 +48,29 @@
                         <li class=""><a href="/intro.html">ABOUT</a>
                             <ul class="sub">
                                 <li><a href="/intro.html">About Us</a></li>
-                                <li><a href="index.html">Business Ethics</a></li>
-                                <li><a href="index.html">Partnerships</a></li>
-                                <li><a href="index.html">History</a></li>
-                                <li><a href="index.html">CEO Message</a></li>
-                                <li><a href="index.html">Contact & Location</a></li>
+                                <li><a href="/index.html">Business Ethics</a></li>
+                                <li><a href="/index.html">Partnerships</a></li>
+                                <li><a href="/index.html">History</a></li>
+                                <li><a href="/index.html">CEO Message</a></li>
+                                <li><a href="/index.html">Contact & Location</a></li>
                             </ul>
                         </li>
                         <li><a href="/Listworks_lee.html">WORKS</a>
                             <ul class="sub">
-                                <li><a href="Listworks_lee.html">Production List</a></li>
+                                <li><a href="/Listworks_lee.html">Production List</a></li>
                                 <li><a href="/viewersplayground_moon.html">Viewer Participation</a></li>
                             </ul>
                         </li>
-                        <li><a href="index.html">NEWSROOM</a>
+                        <li><a href="/index.html">NEWSROOM</a>
                             <ul class="sub">
-                                <li><a href="index.html">Notice</a></li>
-                                <li><a href="index.html">News</a></li>
+                                <li><a href="/index.html">Notice</a></li>
+                                <li><a href="/index.html">News</a></li>
                             </ul>
                         </li>
                         <li><a href="/IR.html">IR</a>
                             <ul class="sub">
-                                <li><a href="IR.html">IR Insights</a></li>
-                                <li><a href="index.html">Materials</a></li>
+                                <li><a href="/IR.html">IR Insights</a></li>
+                                <li><a href="/index.html">Materials</a></li>
                             </ul>
                         </li>
                         <li><a href="index.html">SUSTAINABILITY</a>
