--- a/intro.html
+++ b/intro.html
@@ -42,7 +42,7 @@
                         <li class=""><a href="/intro.html">ABOUT</a>
                             <ul class="sub">
                                 <li><a href="/intro.html">About Us</a></li>
-                                <li><a href="index.html">Business Ethics</a></li>
+                                <li><a href="/index.html">Business Ethics</a></li>
                                 <li><a href="index.html">Partnerships</a></li>
                                 <li><a href="index.html">History</a></li>
                                 <li><a href="index.html">CEO Message</a></li>
