--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
                 <h1><a href="/index.html" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
                 <nav class="">
                     <ul class="gnb">
-                        <li class=""><a href="/intro.html">ABOUT</a>
+                        <li class=""><a href="intro.html">ABOUT</a>
                             <ul class="sub">
-                                <li><a href="/intro.html">About Us</a></li>
-                                <li><a href="/index.html">Business Ethics</a></li>
-                                <li><a href="/index.html">Partnerships</a></li>
-                                <li><a href="/index.html">History</a></li>
-                                <li><a href="/index.html">CEO Message</a></li>
-                                <li><a href="/index.html">Contact & Location</a></li>
+                                <li><a href="intro.html">About Us</a></li>
+                                <li><a href="index.html">Business Ethics</a></li>
+                                <li><a href="index.html">Partnerships</a></li>
+                                <li><a href="index.html">History</a></li>
+                                <li><a href="index.html">CEO Message</a></li>
+                                <li><a href="index.html">Contact & Location</a></li>
                             </ul>
                         </li>
                         <li><a href="/Listworks_lee.html">WORKS</a>
