--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <header class="">
             <div class="inner">
-                <h1><a href="/index.html" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
+                <h1><a href="index.html" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
                 <nav class="">
                     <ul class="gnb">
                         <li class=""><a href="intro.html">ABOUT</a>
@@ -55,22 +55,22 @@
                                 <li><a href="index.html">Contact & Location</a></li>
                             </ul>
                         </li>
-                        <li><a href="/Listworks_lee.html">WORKS</a>
+                        <li><a href="Listworks_lee.html">WORKS</a>
                             <ul class="sub">
-                                <li><a href="/Listworks_lee.html">Production List</a></li>
-                                <li><a href="/viewersplayground_moon.html">Viewer Participation</a></li>
+                                <li><a href="Listworks_lee.html">Production List</a></li>
+                                <li><a href="viewersplayground_moon.html">Viewer Participation</a></li>
                             </ul>
                         </li>
-                        <li><a href="/index.html">NEWSROOM</a>
+                        <li><a href="index.html">NEWSROOM</a>
                             <ul class="sub">
-                                <li><a href="/index.html">Notice</a></li>
-                                <li><a href="/index.html">News</a></li>
+                                <li><a href="index.html">Notice</a></li>
+                                <li><a href="index.html">News</a></li>
                             </ul>
                         </li>
-                        <li><a href="/IR.html">IR</a>
+                        <li><a href="IR.html">IR</a>
                             <ul class="sub">
-                                <li><a href="/IR.html">IR Insights</a></li>
-                                <li><a href="/index.html">Materials</a></li>
+                                <li><a href="IR.html">IR Insights</a></li>
+                                <li><a href="index.html">Materials</a></li>
                             </ul>
                         </li>
                         <li><a href="index.html">SUSTAINABILITY</a>
@@ -128,9 +128,9 @@
 
             <ul class="main_nav">
                 <li class="nav_item">
-                    <a href="/intro_kim/intro.html" class="main_category">ABOUT</a>
+                    <a href="intro.html" class="main_category">ABOUT</a>
                     <ul class="submenu">
-                        <li><a href="/intro.html">About Us</a></li>
+                        <li><a href="intro.html">About Us</a></li>
                         <li><a href="index.html">Business Ethics</a></li>
                         <li><a href="index.html">Partnerships</a></li>
                         <li><a href="index.html">History</a></li>
