--- a/Listworks_lee.html
+++ b/Listworks_lee.html
@@ -32,8 +32,8 @@
 
     <!-- SplitText 플러그인 -->
     <!-- <script src="https://assets.codepen.io/16327/SplitText3.min.js"></script> -->
-    <script src="/js/common.js"></script>
-    <script src="/lee/js/filter.js" defer></script>
+    <script src="./js/common.js"></script>
+    <script src="lee/js/filter.js" defer></script>
 
   </head>
 
@@ -46,12 +46,12 @@
         </div>
         <header class="">
             <div class="inner">
-                <h1><a href="/index.html" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
+                <h1><a href="index.html" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
                 <nav class="">
                     <ul class="gnb">
-                        <li class=""><a href="/intro.html">ABOUT</a>
+                        <li class=""><a href="intro.html">ABOUT</a>
                             <ul class="sub">
-                                <li><a href="/intro.html">About Us</a></li>
+                                <li><a href="intro.html">About Us</a></li>
                                 <li><a href="index.html">Business Ethics</a></li>
                                 <li><a href="index.html">Partnerships</a></li>
                                 <li><a href="index.html">History</a></li>
@@ -59,10 +59,10 @@
                                 <li><a href="index.html">Contact & Location</a></li>
                             </ul>
                         </li>
-                        <li><a href="/Listworks_lee.html">WORKS</a>
+                        <li><a href="Listworks_lee.html">WORKS</a>
                             <ul class="sub">
                                 <li><a href="Listworks_lee.html">Production List</a></li>
-                                <li><a href="/viewersplayground_moon.html">Viewer Participation</a></li>
+                                <li><a href="viewersplayground_moon.html">Viewer Participation</a></li>
                             </ul>
                         </li>
                         <li><a href="index.html">NEWSROOM</a>
@@ -71,7 +71,7 @@
                                 <li><a href="index.html">News</a></li>
                             </ul>
                         </li>
-                        <li><a href="/IR.html">IR</a>
+                        <li><a href="IR.html">IR</a>
                             <ul class="sub">
                                 <li><a href="IR.html">IR Insights</a></li>
                                 <li><a href="index.html">Materials</a></li>
@@ -96,7 +96,7 @@
                             <a href=""><img src="back/img/user.png" alt="user"></a>
                         </div><!-- //.user -->
                         <div class="nav_ham">
-                            <img src="/asset/nav_ham.svg" alt="">
+                            <img src="./asset/nav_ham.svg" alt="">
                         </div><!-- //.nav_ham -->
                     </div><!-- //.right -->
                 </nav>
@@ -125,16 +125,16 @@
                         <img src="back/img/user.png" alt="Profile">
                     </a>
                     <button type="button" class="icon_link close_btn">
-                        <img src="/asset/x-circle.svg" alt="">
+                        <img src="./asset/x-circle.svg" alt="">
                     </button>
                 </div>
             </div>
 
             <ul class="main_nav">
                 <li class="nav_item">
-                    <a href="/intro_kim/intro.html" class="main_category">ABOUT</a>
+                    <a href="intro.html" class="main_category">ABOUT</a>
                     <ul class="submenu">
-                        <li><a href="/intro.html">About Us</a></li>
+                        <li><a href="intro.html">About Us</a></li>
                         <li><a href="index.html">Business Ethics</a></li>
                         <li><a href="index.html">Partnerships</a></li>
                         <li><a href="index.html">History</a></li>
@@ -264,7 +264,7 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide"><a href="#"><img src="lee/img/Queen_of_Tears.webp" alt="">
                 <span>Queen of Tears</span></a></div>
-            <div class="swiper-slide"><a href="/work_ryu.html"><img src="lee/img/The_Glory4.jpg" alt=""><span>The
+            <div class="swiper-slide"><a href="./work_ryu.html"><img src="lee/img/The_Glory4.jpg" alt=""><span>The
                   Glory</span></a></div>
             <div class="swiper-slide"><a href="#"><img src="lee/img/Marry_My_Husband.jpg" alt=""><span>Marry My
                   Husband</span></a></div>
