--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <a href=""><img src="back/img/user.png" alt="user"></a>
                         </div><!-- //.user -->
                         <div class="nav_ham">
-                            <img src="/asset/nav_ham.svg" alt="">
+                            <img src="asset/nav_ham.svg" alt="">
                         </div><!-- //.nav_ham -->
                     </div><!-- //.right -->
                 </nav>
@@ -121,7 +121,7 @@
                         <img src="back/img/user.png" alt="Profile">
                     </a>
                     <button type="button" class="icon_link close_btn">
-                        <img src="/asset/x-circle.svg" alt="">
+                        <img src="./asset/x-circle.svg" alt="">
                     </button>
                 </div>
             </div>
