--- a/work_ryu.html
+++ b/work_ryu.html
@@ -12,12 +12,12 @@
     <meta property="og:image" content="	https://studiodragon.netlify.app/asset/og_img.png">
     <meta property="og:url" content="https://studiodragon.netlify.app/">
     <title>studiodragon</title>
-    <link rel="shortcut icon" href="/back/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./back/img/favicon.ico" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"><!-- aos -->
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="Work_Ryu/css/work_main.css">
-    <link rel="stylesheet" href="/css/main_media.css">
+    <link rel="stylesheet" href="./css/main_media.css">
     <link rel="stylesheet" href="Work_Ryu/css/work_media.css">
     <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -35,12 +35,12 @@
         </div>
         <header class="">
             <div class="inner">
-                <h1><a href="/index.html" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
+                <h1><a href="index.html" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
                 <nav class="">
                     <ul class="gnb">
-                        <li class=""><a href="/intro_kim/intro.html">ABOUT</a>
+                        <li class=""><a href="intro_kim/intro.html">ABOUT</a>
                             <ul class="sub">
-                                <li><a href="/intro_kim/intro.html">About Us</a></li>
+                                <li><a href="intro.html">About Us</a></li>
                                 <li><a href="index.html">Business Ethics</a></li>
                                 <li><a href="index.html">Partnerships</a></li>
                                 <li><a href="index.html">History</a></li>
@@ -48,10 +48,10 @@
                                 <li><a href="index.html">Contact & Location</a></li>
                             </ul>
                         </li>
-                        <li><a href="/Listworks_lee.html">WORKS</a>
+                        <li><a href="Listworks_lee.html">WORKS</a>
                             <ul class="sub">
                                 <li><a href="Listworks_lee.html">Production List</a></li>
-                                <li><a href="/viewersplayground_moon.html">Viewer Participation</a></li>
+                                <li><a href="viewersplayground_moon.html">Viewer Participation</a></li>
                             </ul>
                         </li>
                         <li><a href="index.html">NEWSROOM</a>
@@ -60,7 +60,7 @@
                                 <li><a href="index.html">News</a></li>
                             </ul>
                         </li>
-                        <li><a href="/IR.html">IR</a>
+                        <li><a href="IR.html">IR</a>
                             <ul class="sub">
                                 <li><a href="IR.html">IR Insights</a></li>
                                 <li><a href="index.html">Materials</a></li>
@@ -85,7 +85,7 @@
                             <a href=""><img src="back/img/user.png" alt="user"></a>
                         </div><!-- //.user -->
                         <div class="nav_ham">
-                            <img src="/asset/nav_ham.svg" alt="">
+                            <img src="./asset/nav_ham.svg" alt="">
                         </div><!-- //.nav_ham -->
                     </div><!-- //.right -->
                 </nav>
@@ -114,16 +114,16 @@
                         <img src="back/img/user.png" alt="Profile">
                     </a>
                     <button type="button" class="icon_link close_btn">
-                        <img src="/asset/x-circle.svg" alt="">
+                        <img src="./asset/x-circle.svg" alt="">
                     </button>
                 </div>
             </div>
 
             <ul class="main_nav">
                 <li class="nav_item">
-                    <a href="/intro_kim/intro.html" class="main_category">ABOUT</a>
+                    <a href="intro.html" class="main_category">ABOUT</a>
                     <ul class="submenu">
-                        <li><a href="/intro.html">About Us</a></li>
+                        <li><a href="intro.html">About Us</a></li>
                         <li><a href="index.html">Business Ethics</a></li>
                         <li><a href="index.html">Partnerships</a></li>
                         <li><a href="index.html">History</a></li>
@@ -1102,7 +1102,7 @@
                                         <h3 class="event_title">Join the SD CREW</h3>
                                         <p class="event_desc">You can be the crew of Studio Dragon</p>
                                     </div><!-- //.event_txt -->
-                                    <button class="btn_go"><a href="/viewersplayground_moon.html">go</a></button>
+                                    <button class="btn_go"><a href="./viewersplayground_moon.html">go</a></button>
                                 </div><!-- //.event_inner -->
                             </div><!-- //.event_content -->
                         </div><!-- //.event_box -->
@@ -1178,7 +1178,7 @@
     </div><!-- //.wrap -->
         
     <!-- JavaScript Files -->
-    <script src="/js/common.js"></script>
+    <script src="./js/common.js"></script>
     <script src="Work_Ryu/js/work_ryu.js"></script>
 </body>
 
