--- a/Listworks_lee.html
+++ b/Listworks_lee.html
@@ -647,7 +647,7 @@
         <div class="footer_bottom">
           <div class="footer_brand">
             <div class="footer_logo">
-              <img src="./asset/Studio Dragon_symbol.svg" alt="Studio Dragon">
+              <img src="../asset/Studio Dragon_symbol.svg" alt="Studio Dragon">
             </div><!-- //.footer_logo -->
             <div class="footer_sns">
               <a href="#" class="sns_link" aria-label="Facebook">
