--- a/work_ryu.html
+++ b/work_ryu.html
@@ -642,7 +642,7 @@
                                     title="YouTube video player" frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                                <img class="video_poster" src="work_ryu/asset/behindvideo_unactive_01.png">
+                                <img class="video_poster" src="./Work_Ryu/asset/behindvideo_unactive_01.png">
                             </div><!-- .video_thumbnail -->
 
                             <div class="video_textbox">
@@ -676,7 +676,7 @@
                                     title="YouTube video player" frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                                <img class="video_poster" src="work_ryu/asset/behindvideo_unactive_02.png"
+                                <img class="video_poster" src="./Work_Ryu/asset/behindvideo_unactive_02.png"
                                     alt="Ready, Set, Debate!">
                             </div><!-- .video_thumbnail -->
 
@@ -711,7 +711,7 @@
                                     title="YouTube video player" frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                                <img class="video_poster" src="work_ryu/asset/behindvideo_unactive_03.png"
+                                <img class="video_poster" src="./Work_Ryu/asset/behindvideo_unactive_03.png"
                                     alt="THE GLORY EXAM">
                             </div><!-- .video_thumbnail -->
 
