--- a/viewersplayground_moon.html
+++ b/viewersplayground_moon.html
@@ -34,12 +34,12 @@
         </div>
         <header class="">
             <div class="inner">
-                <h1><a href="/index.html" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
+                <h1><a href="index.html" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
                 <nav class="">
                     <ul class="gnb">
-                        <li class=""><a href="/intro.html">ABOUT</a>
+                        <li class=""><a href="intro.html">ABOUT</a>
                             <ul class="sub">
-                                <li><a href="/intro.html">About Us</a></li>
+                                <li><a href="intro.html">About Us</a></li>
                                 <li><a href="index.html">Business Ethics</a></li>
                                 <li><a href="index.html">Partnerships</a></li>
                                 <li><a href="index.html">History</a></li>
@@ -47,10 +47,10 @@
                                 <li><a href="index.html">Contact & Location</a></li>
                             </ul>
                         </li>
-                        <li><a href="/Listworks_lee.html">WORKS</a>
+                        <li><a href="Listworks_lee.html">WORKS</a>
                             <ul class="sub">
                                 <li><a href="Listworks_lee.html">Production List</a></li>
-                                <li><a href="/viewersplayground_moon.html">Viewer Participation</a></li>
+                                <li><a href="viewersplayground_moon.html">Viewer Participation</a></li>
                             </ul>
                         </li>
                         <li><a href="index.html">NEWSROOM</a>
@@ -59,7 +59,7 @@
                                 <li><a href="index.html">News</a></li>
                             </ul>
                         </li>
-                        <li><a href="/IR.html">IR</a>
+                        <li><a href="IR.html">IR</a>
                             <ul class="sub">
                                 <li><a href="IR.html">IR Insights</a></li>
                                 <li><a href="index.html">Materials</a></li>
@@ -84,7 +84,7 @@
                             <a href=""><img src="back/img/user.png" alt="user"></a>
                         </div><!-- //.user -->
                         <div class="nav_ham">
-                            <img src="/asset/nav_ham.svg" alt="">
+                            <img src="asset/nav_ham.svg" alt="">
                         </div><!-- //.nav_ham -->
                     </div><!-- //.right -->
                 </nav>
@@ -113,16 +113,16 @@
                         <img src="back/img/user.png" alt="Profile">
                     </a>
                     <button type="button" class="icon_link close_btn">
-                        <img src="/asset/x-circle.svg" alt="">
+                        <img src="asset/x-circle.svg" alt="">
                     </button>
                 </div>
             </div>
 
             <ul class="main_nav">
                 <li class="nav_item">
-                    <a href="/intro_kim/intro.html" class="main_category">ABOUT</a>
+                    <a href="intro_kim/intro.html" class="main_category">ABOUT</a>
                     <ul class="submenu">
-                        <li><a href="/intro_kim/intro.html">About Us</a></li>
+                        <li><a href="intro.html">About Us</a></li>
                         <li><a href="index.html">Business Ethics</a></li>
                         <li><a href="index.html">Partnerships</a></li>
                         <li><a href="index.html">History</a></li>
