--- a/intro.html
+++ b/intro.html
@@ -8,7 +8,7 @@
     <meta name="author" content="100SJ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>studiodragon</title>
-    <link rel="shortcut icon" href="/back/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/reset.css">
@@ -115,7 +115,7 @@
                         <img src="back/img/user.png" alt="Profile">
                     </a>
                     <button type="button" class="icon_link close_btn">
-                        <img src="/asset/x-circle.svg" alt="">
+                        <img src="asset/x-circle.svg" alt="">
                     </button>
                 </div>
             </div>
@@ -124,7 +124,7 @@
                 <li class="nav_item">
                     <a href="intro.html" class="main_category">ABOUT</a>
                     <ul class="submenu">
-                        <li><a href="/intro_kim/intro.html">About Us</a></li>
+                        <li><a href="intro.html">About Us</a></li>
                         <li><a href="index.html">Business Ethics</a></li>
                         <li><a href="index.html">Partnerships</a></li>
                         <li><a href="index.html">History</a></li>
@@ -512,7 +512,7 @@
                                             stroke-width="3" />
                                     </svg>
                                     <p>&nbsp;</p>
-                                    <img src="/intro_kim/assets/image/little_women2.jpg" alt=""></img><em>Little Women wins
+                                    <img src="intro_kim/assets/image/little_women2.jpg" alt=""></img><em>Little Women wins
                                         APAN Star Awards Best Drama</em>
                                 </li>
                                 <li>
