--- a/IR.html
+++ b/IR.html
@@ -263,7 +263,7 @@
       <div class="container">
         <article class="card">
           <figure class="img_wrap">
-            <img src="./IR_Kwon/img/execution_pro.png" alt="Production" />
+            <img src="IR_Kwon/img/execution_pro.png" alt="Production" />
           </figure><!-- //.img_wrap -->
           <div class="content">
             <h3>Production</h3>
@@ -272,7 +272,7 @@
         </article><!-- //.card -->
         <article class="card">
           <figure class="img_wrap">
-            <img src="./IR_Kwon/img/execution_dis.png" alt="Distribution" />
+            <img src="IR_Kwon/img/execution_dis.png" alt="Distribution" />
           </figure><!-- //.img_wrap -->
           <div class="content">
             <h3>Distribution</h3>
@@ -281,7 +281,7 @@
         </article><!-- //.card -->
         <article class="card">
           <figure class="img_wrap">
-            <img src="./IR_Kwon/img/execution_par.png" alt="Partners" />
+            <img src="IR_Kwon/img/execution_par.png" alt="Partners" />
           </figure><!-- //.img_wrap -->
           <div class="content">
             <h3>Partners</h3>
@@ -290,7 +290,7 @@
         </article><!-- //.card -->
         <article class="card">
           <figure class="img_wrap">
-            <img src="./IR_Kwon/img/execution_mar.png" alt="Marketing" />
+            <img src="IR_Kwon/img/execution_mar.png" alt="Marketing" />
           </figure><!-- //.img_wrap -->
           <div class="content">
             <h3>Marketing</h3>
