--- a/Listworks_lee.html
+++ b/Listworks_lee.html
@@ -612,65 +612,68 @@
       </div>
     </section> -->
 
-    <footer class="footer">
-      <div class="footer_inner">
-        <!-- Top Area -->
-        <div class="footer_top">
-          <div class="footer_menu">
-            <div class="footer_gnb">
-              <a href="#" class="footer_gnb_link home">Home</a>
-              <div class="footer_gnb_wrap">
-                <ul class="footer_gnb_list">
-                  <li><a href="#" class="footer_gnb_link">Hotline</a></li>
-                  <li><a href="#" class="footer_gnb_link">Recruitment</a></li>
-                  <li><a href="#" class="footer_gnb_link">Contact Us</a></li>
-                  <li><a href="#" class="footer_gnb_link">Sitemap</a></li>
-                </ul><!-- //.footer_gnb_list -->
+    <!-- 푸터 시작 -->
+        <footer class="ver_dark ver_white">
+            <div class="footer_inner">
+                <!-- Top Area -->
+                <div class="footer_top">
+                    <div class="footer_menu">
+                        <div class="footer_gnb">
+                            <a href="index.html" class="footer_gnb_link home">Home</a>
+                            <div class="footer_gnb_wrap">
+                                <ul class="footer_gnb_list">
+                                    <li><a href="#" class="footer_gnb_link">Hotline</a></li>
+                                    <li><a href="#" class="footer_gnb_link">Recruitment</a></li>
+                                    <li><a href="#" class="footer_gnb_link">Contact Us</a></li>
+                                    <li><a href="#" class="footer_gnb_link">Sitemap</a></li>
+                                </ul><!-- //.footer_gnb_list -->
 
-                <div class="footer_family_site">
-                  <button type="button" class="family_site_btn">
-                    <span>Family Site</span>
-                    <img src="https://www.figma.com/api/mcp/asset/197702ac-94a3-4f96-8d2d-799feadd2429" alt="arrow"
-                      class="family_site_arrow">
-                  </button>
-                  <ul class="family_site_list">
-                    <li><a href="#" class="family_site_link">CJ ENM</a></li>
-                    <li><a href="#" class="family_site_link">CJ GROUP</a></li>
-                  </ul><!-- //.family_site_list -->
-                </div><!-- //.footer_family_site -->
-              </div><!-- //.footer_gnb_wrap -->
-            </div><!-- //.footer_gnb -->
-          </div><!-- //.footer_menu -->
-        </div><!-- //.footer_top -->
+                                <div class="footer_family_site">
+                                    <ul class="family_site_list">
+                                        <li><a href="#" class="family_site_link">CJ ENM</a></li>
+                                        <li><a href="#" class="family_site_link">CJ GROUP</a></li>
+                                        <li class="family_site_btn_wrap">
+                                            <button type="button" class="family_site_btn">
+                                                <span>Family Site</span>
+                                                <img src="asset/up.svg" alt="arrow" class="family_site_arrow">
+                                            </button>
+                                        </li>
+                                    </ul><!-- //.family_site_list -->
+                                </div><!-- //.footer_family_site -->
+                            </div><!-- //.footer_gnb_wrap -->
+                        </div><!-- //.footer_gnb -->
+                    </div><!-- //.footer_menu -->
+                </div><!-- //.footer_top -->
 
-        <!-- Bottom Area -->
-        <div class="footer_bottom">
-          <div class="footer_brand">
-            <div class="footer_logo">
-              <img src="../asset/Studio Dragon_symbol.svg" alt="Studio Dragon">
-            </div><!-- //.footer_logo -->
-            <div class="footer_sns">
-              <a href="#" class="sns_link" aria-label="Facebook">
-                <img src="https://www.figma.com/api/mcp/asset/5800100e-1025-4331-93b9-282625c7d4cb" alt="Facebook">
-              </a>
-              <a href="#" class="sns_link" aria-label="YouTube">
-                <img src="https://www.figma.com/api/mcp/asset/be09f0e9-409a-4ee6-a049-4c9ae3290332" alt="YouTube">
-              </a>
-              <a href="#" class="sns_link" aria-label="Instagram">
-                <img src="https://www.figma.com/api/mcp/asset/407868c3-bc59-4607-af72-b9d6ef547455" alt="Instagram">
-              </a>
-            </div><!-- //.footer_sns -->
-          </div><!-- //.footer_brand -->
+                <!-- Bottom Area -->
+                <div class="footer_bottom">
+                    <div class="footer_brand">
+                        <div class="footer_logo">
 
-          <div class="footer_info">
-            <p class="footer_info_text">CEO : Jang Kyung-ik</p>
-            <p class="footer_info_text">Studio Dregon Corporation, 17F1, 75, Maebongsan-ro, Mapo-gu, Seoul, Republic of
-              Korea | Business registration number : 747-81-00388</p>
-            <p class="footer_info_text">© STUDIO DRAGON.All Rights Reserved.</p>
-          </div><!-- //.footer_info -->
-        </div><!-- //.footer_bottom -->
-      </div><!-- //.footer_inner -->
-    </footer><!-- //.footer -->
+                        </div><!-- //.footer_logo -->
+
+                        <div class="footer_sns">
+                            <a href="#" class="sns_link" aria-label="Facebook">
+                                <img src="asset/facebook.svg" alt="Facebook">
+                            </a>
+                            <a href="#" class="sns_link" aria-label="YouTube">
+                                <img src="asset/youtube.svg" alt="YouTube">
+                            </a>
+                            <a href="#" class="sns_link" aria-label="Instagram">
+                                <img src="asset/Instagram.svg" alt="Instagram">
+                            </a>
+                        </div><!-- //.footer_sns -->
+                    </div><!-- //.footer_brand -->
+
+                    <div class="footer_info">
+                        <p class="footer_info_text">CEO : Jang Kyung-ik</p>
+                        <p class="footer_info_text">Studio Dragon Corporation, 17F1, 75, Maebongsan-ro, Mapo-gu Seoul, Republic of Korea | Business registration number : 747-81-00388</p>
+                        <p class="footer_info_text">© STUDIO DRAGON.All Rights Reserved.</p>
+                    </div><!-- //.footer_info -->
+                </div><!-- //.footer_bottom -->
+            </div><!-- //.footer_inner -->
+        </footer><!-- //.footer -->
+        <!-- 여기까지 푸터 -->
   </div><!-- //.wrap -->
   </script>
 </body>
