--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Studio Dragon">
     <meta property="og:description" content="Studio Dragon, a premium storyteller group">
-    <meta property="og:image" content="	https://studiodragon.netlify.app/asset/og_img.png">
-    <meta property="og:url" content="https://studiodragon.netlify.app/">
+    <meta property="og:image" content="	https://root-ryu.github.io/StudioDragon/asset/og_img.png">
+    <meta property="og:url" content="https://root-ryu.github.io/StudioDragon/">
     <title>studiodragon</title>
     <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
