--- a/viewersplayground_moon.html
+++ b/viewersplayground_moon.html
@@ -2,14 +2,15 @@
 <html lang="en">
 
 <head>
+  <meta charset="UTF-8">
   <meta name="description" content="We Are Studio Dragon">
   <meta name="keywords" content="Studio Dragon, a premium storyteller group">
   <meta name="author" content="Team 2eezy">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Studio Dragon">
   <meta property="og:description" content="Studio Dragon, a premium storyteller group">
-  <meta property="og:image" content="	https://studiodragon.netlify.app/asset/og_img.png">
-  <meta property="og:url" content="https://studiodragon.netlify.app/">
+  <meta property="og:image" content="	https://root-ryu.github.io/StudioDragon/asset/og_img.png">
+  <meta property="og:url" content="https://root-ryu.github.io/StudioDragon/">
   <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://unpkg.com/swiper@9/swiper-bundle.min.css">
   <link rel="stylesheet" href="./css/reset.css">
@@ -30,143 +31,143 @@
 <body>
   <div class="wrap">
     <!-- 헤더 시작 -->
-        <div class="header_bg">
+    <div class="header_bg">
+    </div>
+    <header class="">
+      <div class="inner">
+        <h1><a href="index.html" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
+        <nav class="">
+          <ul class="gnb">
+            <li class=""><a href="intro.html">ABOUT</a>
+              <ul class="sub">
+                <li><a href="intro.html">About Us</a></li>
+                <li><a href="index.html">Business Ethics</a></li>
+                <li><a href="index.html">Partnerships</a></li>
+                <li><a href="index.html">History</a></li>
+                <li><a href="index.html">CEO Message</a></li>
+                <li><a href="index.html">Contact & Location</a></li>
+              </ul>
+            </li>
+            <li><a href="Listworks_lee.html">WORKS</a>
+              <ul class="sub">
+                <li><a href="Listworks_lee.html">Production List</a></li>
+                <li><a href="viewersplayground_moon.html">Viewer Participation</a></li>
+              </ul>
+            </li>
+            <li><a href="index.html">NEWSROOM</a>
+              <ul class="sub">
+                <li><a href="index.html">Notice</a></li>
+                <li><a href="index.html">News</a></li>
+              </ul>
+            </li>
+            <li><a href="IR.html">IR</a>
+              <ul class="sub">
+                <li><a href="IR.html">IR Insights</a></li>
+                <li><a href="index.html">Materials</a></li>
+              </ul>
+            </li>
+            <li><a href="index.html">SUSTAINABILITY</a>
+              <ul class="sub">
+                <li><a href="index.html">Sustainability Story</a></li>
+                <li><a href="index.html">Sustainability Activities</a></li>
+                <li><a href="index.html">Sustainability Report</a></li>
+                <li><a href="index.html">ESG Ratings</a></li>
+                <li><a href="index.html">Sustainability Report</a></li>
+              </ul>
+            </li>
+          </ul><!-- //.gnb -->
+          <div class="right">
+            <div class="lang">
+              <a href="#" class="en active">EN</a>
+              <a href="#" class="kr ">KR</a>
+            </div><!-- //.lang -->
+            <div class="user">
+              <a href=""><img src="back/img/user.png" alt="user"></a>
+            </div><!-- //.user -->
+            <div class="nav_ham">
+              <img src="asset/nav_ham.svg" alt="">
+            </div><!-- //.nav_ham -->
+          </div><!-- //.right -->
+        </nav>
+      </div><!-- //.inner -->
+    </header>
+
+    <!-- 햄버거 메뉴 독립 배치 -->
+    <div class="ham">
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
+
+    <!-- 햄버거 메뉴 네비게이션 -->
+    <nav class="ham_nav">
+      <div class="menu_header">
+        <div class="language_switcher">
+          <a href="#" class="lang_link active">EN</a>
+          <a href="#" class="lang_link">KO</a>
         </div>
-        <header class="">
-            <div class="inner">
-                <h1><a href="index.html" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
-                <nav class="">
-                    <ul class="gnb">
-                        <li class=""><a href="intro.html">ABOUT</a>
-                            <ul class="sub">
-                                <li><a href="intro.html">About Us</a></li>
-                                <li><a href="index.html">Business Ethics</a></li>
-                                <li><a href="index.html">Partnerships</a></li>
-                                <li><a href="index.html">History</a></li>
-                                <li><a href="index.html">CEO Message</a></li>
-                                <li><a href="index.html">Contact & Location</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="Listworks_lee.html">WORKS</a>
-                            <ul class="sub">
-                                <li><a href="Listworks_lee.html">Production List</a></li>
-                                <li><a href="viewersplayground_moon.html">Viewer Participation</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="index.html">NEWSROOM</a>
-                            <ul class="sub">
-                                <li><a href="index.html">Notice</a></li>
-                                <li><a href="index.html">News</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="IR.html">IR</a>
-                            <ul class="sub">
-                                <li><a href="IR.html">IR Insights</a></li>
-                                <li><a href="index.html">Materials</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="index.html">SUSTAINABILITY</a>
-                            <ul class="sub">
-                                <li><a href="index.html">Sustainability Story</a></li>
-                                <li><a href="index.html">Sustainability Activities</a></li>
-                                <li><a href="index.html">Sustainability Report</a></li>
-                                <li><a href="index.html">ESG Ratings</a></li>
-                                <li><a href="index.html">Sustainability Report</a></li>
-                            </ul>
-                        </li>
-                    </ul><!-- //.gnb -->
-                    <div class="right">
-                        <div class="lang">
-                            <a href="#" class="en active">EN</a>
-                            <a href="#" class="kr ">KR</a>
-                        </div><!-- //.lang -->
-                        <div class="user">
-                            <a href=""><img src="back/img/user.png" alt="user"></a>
-                        </div><!-- //.user -->
-                        <div class="nav_ham">
-                            <img src="asset/nav_ham.svg" alt="">
-                        </div><!-- //.nav_ham -->
-                    </div><!-- //.right -->
-                </nav>
-            </div><!-- //.inner -->
-        </header>
 
-        <!-- 햄버거 메뉴 독립 배치 -->
-        <div class="ham">
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
+        <div class="menu_icons">
+          <a href="#" class="icon_link">
+            <img src="back/img/user.png" alt="Profile">
+          </a>
+          <button type="button" class="icon_link close_btn">
+            <img src="asset/x-circle.svg" alt="">
+          </button>
         </div>
+      </div>
 
-        <!-- 햄버거 메뉴 네비게이션 -->
-        <nav class="ham_nav">
-            <div class="menu_header">
-                <div class="language_switcher">
-                    <a href="#" class="lang_link active">EN</a>
-                    <a href="#" class="lang_link">KO</a>
-                </div>
+      <ul class="main_nav">
+        <li class="nav_item">
+          <a href="intro_kim/intro.html" class="main_category">ABOUT</a>
+          <ul class="submenu">
+            <li><a href="intro.html">About Us</a></li>
+            <li><a href="index.html">Business Ethics</a></li>
+            <li><a href="index.html">Partnerships</a></li>
+            <li><a href="index.html">History</a></li>
+            <li><a href="index.html">CEO Message</a></li>
+            <li><a href="index.html">Contact & Location</a></li>
+          </ul>
+        </li>
 
-                <div class="menu_icons">
-                    <a href="#" class="icon_link">
-                        <img src="back/img/user.png" alt="Profile">
-                    </a>
-                    <button type="button" class="icon_link close_btn">
-                        <img src="asset/x-circle.svg" alt="">
-                    </button>
-                </div>
-            </div>
+        <li class="nav_item">
+          <a href="Listworks_lee.html" class="main_category">WORKS</a>
+          <ul class="submenu">
+            <li><a href="Listworks_lee.html">Production List</a></li>
+            <li><a href="viewersplayground_moon.html">Viewer Participation</a></li>
+          </ul>
+        </li>
 
-            <ul class="main_nav">
-                <li class="nav_item">
-                    <a href="intro_kim/intro.html" class="main_category">ABOUT</a>
-                    <ul class="submenu">
-                        <li><a href="intro.html">About Us</a></li>
-                        <li><a href="index.html">Business Ethics</a></li>
-                        <li><a href="index.html">Partnerships</a></li>
-                        <li><a href="index.html">History</a></li>
-                        <li><a href="index.html">CEO Message</a></li>
-                        <li><a href="index.html">Contact & Location</a></li>
-                    </ul>
-                </li>
+        <li class="nav_item">
+          <a href="index.html" class="main_category">NEWSROOM</a>
+          <ul class="submenu">
+            <li><a href="index.html">Notice</a></li>
+            <li><a href="index.html">News</a></li>
+          </ul>
+        </li>
 
-                <li class="nav_item">
-                    <a href="Listworks_lee.html" class="main_category">WORKS</a>
-                    <ul class="submenu">
-                        <li><a href="Listworks_lee.html">Production List</a></li>
-                        <li><a href="viewersplayground_moon.html">Viewer Participation</a></li>
-                    </ul>
-                </li>
+        <li class="nav_item">
+          <a href="IR.html" class="main_category">IR</a>
+          <ul class="submenu">
+            <li><a href="IR.html">IR Insights</a></li>
+            <li><a href="index.html">Materials</a></li>
+          </ul>
+        </li>
 
-                <li class="nav_item">
-                    <a href="index.html" class="main_category">NEWSROOM</a>
-                    <ul class="submenu">
-                        <li><a href="index.html">Notice</a></li>
-                        <li><a href="index.html">News</a></li>
-                    </ul>
-                </li>
-
-                <li class="nav_item">
-                    <a href="IR.html" class="main_category">IR</a>
-                    <ul class="submenu">
-                        <li><a href="IR.html">IR Insights</a></li>
-                        <li><a href="index.html">Materials</a></li>
-                    </ul>
-                </li>
-
-                <li class="nav_item">
-                    <a href="index.html" class="main_category">SUSTAINABILITY</a>
-                    <ul class="submenu">
-                        <li><a href="index.html">Sustainability Story</a></li>
-                        <li><a href="index.html">Sustainability Activities</a></li>
-                        <li><a href="index.html">Sustainability Report</a></li>
-                        <li><a href="index.html">ESG Ratings</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav><!-- //.ham_nav -->
-        <!-- 여기까지 헤더 -->
+        <li class="nav_item">
+          <a href="index.html" class="main_category">SUSTAINABILITY</a>
+          <ul class="submenu">
+            <li><a href="index.html">Sustainability Story</a></li>
+            <li><a href="index.html">Sustainability Activities</a></li>
+            <li><a href="index.html">Sustainability Report</a></li>
+            <li><a href="index.html">ESG Ratings</a></li>
+          </ul>
+        </li>
+      </ul>
+    </nav><!-- //.ham_nav -->
+    <!-- 여기까지 헤더 -->
 
     <!-- 메인 -->
     <main>
@@ -203,7 +204,8 @@
           <div class="winner-wrap">
             <div class="video-content">
               <div class="video-wrap">
-                <video src="./moon/asset/the glory.mp4" autoplay muted loop playsinline controlslist="nodownload" oncontextmenu="return false;"></video>
+                <video src="./moon/asset/the glory.mp4" autoplay muted loop playsinline controlslist="nodownload"
+                  oncontextmenu="return false;"></video>
                 <div class="award-info">
                   <h3 class="award">Gold Award</h3>
                   <div class="txtbox">
@@ -237,7 +239,8 @@
             </div><!-- .video-content -->
             <div class="video-content">
               <div class="video-wrap">
-                <video src="./moon/asset/the glory.mp4" autoplay muted loop playsinline controlslist="nodownload" oncontextmenu="return false;"></video>
+                <video src="./moon/asset/the glory.mp4" autoplay muted loop playsinline controlslist="nodownload"
+                  oncontextmenu="return false;"></video>
                 <div class="award-info">
                   <h3 class="award">Silver Award</h3>
                   <div class="txtbox">
@@ -271,7 +274,8 @@
             </div><!-- video-content -->
             <div class="video-content">
               <div class="video-wrap">
-                <video src="./moon/asset/the glory.mp4" autoplay muted loop playsinline controlslist="nodownload" oncontextmenu="return false;"></video>
+                <video src="./moon/asset/the glory.mp4" autoplay muted loop playsinline controlslist="nodownload"
+                  oncontextmenu="return false;"></video>
                 <div class="award-info">
                   <h3 class="award">Popular Choice</h3>
                   <div class="txtbox">
