--- a/Listworks_lee.html
+++ b/Listworks_lee.html
@@ -2,16 +2,14 @@
 <html lang="en"> 
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
     <meta name="description" content="We Are Studio Dragon">
     <meta name="keywords" content="Studio Dragon, a premium storyteller group">
     <meta name="author" content="Team 2eezy">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Studio Dragon">
     <meta property="og:description" content="Studio Dragon, a premium storyteller group">
-    <meta property="og:image" content="	https://studiodragon.netlify.app/asset/og_img.png">
-    <meta property="og:url" content="https://studiodragon.netlify.app/">
+    <meta property="og:image" content="	https://root-ryu.github.io/StudioDragon/asset/og_img.png">
+    <meta property="og:url" content="https://root-ryu.github.io/StudioDragon/">
     <title>list of work</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
