--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <section class="circlebody">
                 <div id="circle">
                     <article class="face1">
-                        <div class="poster"><img src="./back/img/img01.webp" alt="The Glory"></div>
+                        <div class="poster"><a href="work_ryu.html"><img src="./back/img/img01.webp" alt="The Glory"></a></div>
                     </article>
                     <article class="face2">
                         <div class="poster"><img src="./back/img/img02.webp" alt="Queen of Tears"></div>
