--- a/IR.html
+++ b/IR.html
@@ -44,9 +44,9 @@
                 <h1><a href="index.html" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
                 <nav class="">
                     <ul class="gnb">
-                        <li class=""><a href="intro.html">ABOUT</a>
+                        <li class=""><a href="intro.html" class="t" >ABOUT</a>
                             <ul class="sub">
-                                <li><a href="intro.html">About Us</a></li>
+                                <li><a href="intro.html" class="t_small">About Us</a></li>
                                 <li><a href="index.html">Business Ethics</a></li>
                                 <li><a href="index.html">Partnerships</a></li>
                                 <li><a href="index.html">History</a></li>
@@ -54,10 +54,10 @@
                                 <li><a href="index.html">Contact & Location</a></li>
                             </ul>
                         </li>
-                        <li><a href="Listworks_lee.html">WORKS</a>
+                        <li><a href="Listworks_lee.html" class="t">WORKS</a>
                             <ul class="sub">
-                                <li><a href="Listworks_lee.html">Production List</a></li>
-                                <li><a href="viewersplayground_moon.html">Viewer Participation</a></li>
+                                <li><a href="Listworks_lee.html" class="t_small">Production List</a></li>
+                                <li><a href="viewersplayground_moon.html" class="t_small">Viewer Participation</a></li>
                             </ul>
                         </li>
                         <li><a href="index.html">NEWSROOM</a>
@@ -66,9 +66,9 @@
                                 <li><a href="index.html">News</a></li>
                             </ul>
                         </li>
-                        <li><a href="IR.html">IR</a>
-                            <ul class="sub">
-                                <li><a href="IR.html">IR Insights</a></li>
+                        <li><a href="IR.html" class="t_ir">IR</a>
+                            <ul class="sub ">
+                                <li><a href="IR.html" class="t_small">IR Insights</a></li>
                                 <li><a href="index.html">Materials</a></li>
                             </ul>
                         </li>
